# surface-cdms

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSION
installer/: MANIFEST.in  Makefile  README.md  pyproject.toml
installer/src/surface_cdms/: cli.py  doctor.py  info.py  install.py  manage.py  version.py
installer/src/surface_cdms/wx_config/ansible/surface_app/env/: .env  production.env  user
installer/src/surface_cdms/wx_config/ansible/surface_app/project/: install_surface.yml  remote_install_surface.yml
installer/src/surface_cdms/wx_config/core/: context_processors.py
installer/src/surface_cdms/wx_config/static/config_app/css/: style.css
installer/src/surface_cdms/wx_config/static/surface_app/css/: style.css
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/AIA_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/ATG_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/BHS_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/BLZ_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/BRB_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/CYM_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/DMA_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/GRD_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/GUY_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/JAM_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/KNA_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/LCA_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/MSR_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/SXM_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/fixtures/TCA_fixtures/: wx_administrativeregion.json  wx_country.json  wx_countryisocode.json
installer/src/surface_cdms/wx_config/static/surface_app/js/: script.js
installer/src/surface_cdms/wx_config/surface_app/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
installer/src/surface_cdms/wx_config/surface_app/migrations/: 0001_initial.py
installer/src/surface_cdms/wx_config/templates/config_app/: index.html
installer/src/surface_cdms/wx_config/templates/surface_app/: config_complete.html  configuration.html
installer/src/surface_cdms/wx_config/wx_config/: settings.py
installer/src/surface_cdms/wx_playbook/project/: wx_configuration.yml
(+120 files in other folders)
