[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surface-cdms"
version = "0.8.0-beta.1"
description = "Installer and management CLI for SURFACE CDMS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }


authors = [
  { name = "National Meteorological Service of Belize", email = "nmstechbz@gmail.com" },
]

maintainers = [
  { name = "Jeremiah Hammond", email = "jeremiahhammond14@gmail.com" },
  { name = "National Meteorological Service of Belize", email = "nmstechbz@gmail.com" },
]

keywords = [
  "surface",
  "surface-cdms",
  "weather",
  "climate",
  "cdms",
  "meteorology",
  "installer",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: System :: Installation/Setup",
  "Natural Language :: English",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: POSIX :: Linux",
]

dependencies = [
  "click>=8.1.0",
  "ansible==10.7.0",
  "ansible-runner==2.4.0",
  "django==4.1",
  "celery==5.5.3",
  "redis==6.2.0",
  "whitenoise==6.7.0",
]

[project.urls]
Homepage = "https://github.com/NMS-Belize/surface-cdms"
Repository = "https://github.com/NMS-Belize/surface-cdms"
Issues = "https://github.com/NMS-Belize/surface-cdms/issues"

[project.scripts]
surface = "surface_cdms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["surface_cdms", "surface_cdms.*"]